Make `buildTools/test` work on Java 17
Previously, we only tested `sbt test` on Java 8 and we had a lot of
failing tests if sbt was started with Java 17. This commit makes the
tests in the `buildTools` project pass on Java 17.