@@ -126,8 +126,9 @@ class GradleBuildTool(index: IndexCommand) extends BuildTool("Gradle", index) {
   }
 
   private def initScript(toolchains: GradleJavaToolchains, tmp: Path): Path = {
+    val executableJavacPath = toolchains.executableJavacPath()
     val executable =
-      toolchains.executableJavacPath() match {
+      executableJavacPath match {
         case Some(path) =>
           s"options.forkOptions.executable = '$path'"
         case None =>
@@ -144,17 +145,6 @@ class GradleBuildTool(index: IndexCommand) extends BuildTool("Gradle", index) {
     val dependenciesPath = targetroot.resolve("dependencies.txt")
     val kotlinSemanticdbVersion = BuildInfo.semanticdbKotlincVersion
     Files.deleteIfExists(dependenciesPath)
-    val javaModuleOptions =
-      if (Properties.isJavaAtLeast(9)) {
-        // Include --add-exports flags for Java 9+
-        BuildInfo
-          .javacModuleOptions
-          .map(option => s""""$option"""")
-          .mkString(",")
-      } else {
-        // No --add-exports flags for Java 8
-        ""
-      }
     val script =
       s"""|allprojects {
           |  gradle.projectsEvaluated {
@@ -171,7 +161,7 @@ class GradleBuildTool(index: IndexCommand) extends BuildTool("Gradle", index) {
           |      tasks.withType(JavaCompile) {
           |        options.fork = true
           |        options.incremental = false
-          |        options.forkOptions.jvmArgs.addAll([$javaModuleOptions])
+          |        System.out.println("JAVA VERSION " + System.getProperty("java.version"))
           |        $executable
           |      }
           |    }
